# learner

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  create_fake_data.py  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  site_config.toml
.github/workflows/: ci.yml  django.yml  opencode-review.yml  opencode.yml
accounts/: README.md  forms.py  tests.py  urls.py  views.py
catalog/: README.md  admin.py  forms.py  models.py  tests.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_author_options_author_name_and_more.py  0003_populate_author_name.py  0004_remove_author_first_name_remove_author_last_name_and_more.py
catalog/templates/: base_generic.html
config/: mixins.py  settings.py  toml.py  urls.py
core/: README.md  admin.py  models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
learning_logs/: README.md  admin.py  form.py  forms.py  models.py  tests.py  urls.py  views.py
learning_logs/migrations/: 0001_initial.py  0002_entry.py  0003_rename_data_added_entry_date_added_and_more.py  0004_alter_entry_text.py  0005_topic_owner.py  0006_alter_entry_options_entry_is_public_entry_title_and_more.py  0007_entry_liked_by_comment.py  0008_alter_comment_options_comment_parent.py
learning_logs/templatetags/: comment_tags.py
static/css/: form.css  input.css  output.css
templates/: base.html  index.html
templates/admin/: base_site.html
templates/components/: footer.html  header.html  load_more.html  pagination.html
(+83 files in other folders)
